# sirius-proxima

./: .gitignore  .rusty-hook.toml  Cargo.toml  README.md  clippy.toml  env.sample.config  sample.app-settings.yaml  sample.iot-settings.yaml  sample.settings.yaml
scripts/: -base.sh  -build-run-dev.sh  -build-run-release.sh  -resets.sh  build-base.sh  build-dev.sh  build-run-dev.sh  build-run-local-dev.sh  build-run-local-release.sh  build-run-release.sh  build-watch-local-dev.sh  build.sh  envs.sh  run-dev.sh
src/: main.rs
src/api/: mod.rs
src/api/helpers/: responses.rs
src/api/route_handlers/: mod.rs
src/api/route_handlers/api_root/unprotected/: health.rs
src/api/route_handlers/api_v1/: mod.rs
src/api/route_handlers/api_v1/sirius_alpha/: mod.rs  notifications.rs  ping.rs
src/api/routes/: mod.rs
src/api/routes/api_root/: default.rs  mod.rs  unprotected.rs
src/api/routes/api_root/unprotected/: route.rs
src/api/routes/api_v1/: sirius_alpha.rs
src/api/routes/api_v1/sirius_alpha/: controller.rs  mod.rs  route.rs
src/common/: mod.rs
src/common/errors/: api_errors.rs  mod.rs  setup_errors.rs
src/common/models/: api.rs  app_settings.rs  data.rs  iot_devices.rs  iot_settings.rs  mod.rs  settings.rs
src/common/states/: app_state.rs
src/constants/: app_env.rs  default_values.rs  file_paths.rs  header_keys.rs  mod.rs  paths.rs  strings.rs  urls.rs
src/helpers/: date.rs  mod.rs  sanitizers.rs  system_time_x.rs
src/helpers/actix/: actix.rs  actix_helpers.rs  mod.rs
src/helpers/parsers/: mod.rs  setting_files.rs
src/services/notification/: mod.rs
src/utils/: core.rs  math.rs  mod.rs  vectors.rs
src/utils/logs/: fern_log.rs  mod.rs
