[package]
name = "sirius-proxima"
description = "IOT RaspberryPI Mothership Module"
version = "0.1.0"
edition = "2018"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_gpiozero = "0.2.1"

rocket = "0.5.0-rc.1"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"

lazy_static = "1.4.0"

fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
anyhow = "1.0.44"
thiserror = "1.0.30"

chrono = "0.4.19"

tokio = { version = "1.12.0", features = ["full"] }
