[package]
name = "sirius-proxima"
description = "IOT RaspberryPI Mothership Module"
version = "0.1.0"
edition = "2018"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust_gpiozero = "0.2.1"

actix-web = "4.0.0-beta.8"
actix = "0.12.0"
actix-identity = "0.4.0-beta.2"
actix-http = "3.0.0-beta.9"
actix-rt = "2"
actix-cors = "0.6.0-beta.2"
actix-service = "2.0.0"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8.21"
serde-value = "0.7.0"

lazy_static = "1.4.0"

fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
anyhow = "1.0.44"
thiserror = "1.0.30"

chrono = "0.4.19"
chrono-tz = { version = "0.6.0", git = "https://github.com/ganeshrvel/chrono-tz", branch = "utc+0530" }

#min-max = "^0.1.8"

tokio = { version = "1.12.0", features = ["full"] }

[dev-dependencies]
rusty-hook = "^0.11.2"
