[package]
name = "sirius-proxima"
description = "IOT RaspberryPI Mothership Module"
version = "0.1.0"
edition = "2018"
authors = ["Ganesh Rathinavel <ganeshrvel@outlook.com>"]
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rust_gpiozero = "0.2.1"


actix-web = { version = "4.0.0-beta.15", features = ["openssl", "default"] }
actix = "0.12.0"
actix-identity = "0.4.0-beta.6"
actix-http = "3.0.0-beta.16"
actix-rt = "2.5.0"
actix-cors = "0.6.0-beta.7"
actix-service = "2.0.2"

openssl = "0.10"

#tracing-actix-web = "0.5.0-beta.6"
#tracing = "0.1.29"

serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
serde_yaml = "0.8.21"
serde-value = "0.7.0"

local-ip-address = "0.4.4"

fern = { version = "0.6.0", features = ["colored"] }
log = "0.4.14"
anyhow = "1.0.51"
thiserror = "1.0.30"

chrono = "0.4.19"
chrono-tz = { version = "0.6.0", git = "https://github.com/ganeshrvel/chrono-tz", branch = "utc+0530" }

tokio = { version = "1.14.0", features = ["full"] }

[dev-dependencies]
rusty-hook = "^0.11.2"

[profile.release]
panic = "abort"
lto = true
codegen-units = 1



